--- a/GaussElimination.ipynb
+++ b/GaussElimination.ipynb
@@ -2,117 +2,150 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Gauss Elimination\r\n",
-    "1. The Elimination Stage\r\n",
+    "# Gauss Elimination\n",
+    "1. The Elimination Stage\n",
     "2. Back Substitution"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. The Elimination Stage"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "import numpy as np\r\n"
-   ],
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import numpy as np\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "# Coefficients of Linear Equation\r\n",
-    "\r\n",
-    "a = np.array([\r\n",
-    "[2, 7, -1, 3, 1],\r\n",
-    "[2, 3, 4, 1, 7],\r\n",
-    "[6, 2, -3, 2, -1],\r\n",
-    "[2, 1, 2, -1, 2],\r\n",
-    "[3, 4, 1, -2, 1]\r\n",
-    "], float)\r\n",
-    "\r\n",
-    "# Constraint Vector of Linear Equation\r\n",
-    "\r\n",
-    "b = np.array([[5],[7],[2],[3],[4]], float)\r\n",
-    "n = len(b)\r\n",
-    "x = np.zeros(n, float)\r\n",
-    "\r\n",
-    "# Elimination\r\n",
-    "\r\n",
-    "# k --> Fixed Rows\r\n",
-    "\r\n",
-    "for k in range(n-1):\r\n",
-    "    for i in range (k+1, n):\r\n",
-    "        factor = a[k,k] / a[i,k]\r\n",
-    "        b[i] = b[k] - (factor * b[i])\r\n",
-    "        for j in range (k, n):\r\n",
-    "            a[i,j] = a[k,j] - (factor * a[i,j])\r\n",
-    "\r\n",
-    "\r\n",
-    "print(a)\r\n",
-    "print(b)"
-   ],
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
      "output_type": "stream",
-     "name": "stdout",
      "text": [
-      "[[ 2.          7.         -1.          3.          1.        ]\n",
-      " [ 0.          4.         -5.          2.         -6.        ]\n",
-      " [ 0.          0.         -5.          0.52631579 -6.84210526]\n",
-      " [ 0.          0.          0.          1.6374269   2.04678363]\n",
-      " [ 0.          0.          0.          0.          0.95890411]]\n",
-      "[[ 5.        ]\n",
-      " [-2.        ]\n",
-      " [-4.73684211]\n",
-      " [ 0.81871345]\n",
-      " [ 0.2130898 ]]\n"
+      "<ipython-input-5-daeb4bf5bfe5>:23: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  factor = a[k,k] / a[i,k]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Coefficients of Linear Equation\n",
+    "\n",
+    "a = np.array([\n",
+    "[0, 7, -1, 3, 1],\n",
+    "[2, 3, 4, 1, 7],\n",
+    "[6, 2, 0, 2, -1],\n",
+    "[2, 1, 2, 0, 2],\n",
+    "[3, 4, 1, -2, 1]\n",
+    "], float)\n",
+    "\n",
+    "# Constraint Vector of Linear Equation\n",
+    "\n",
+    "b = np.array([[5],[7],[2],[3],[4]], float)\n",
+    "n = len(b)\n",
+    "x = np.zeros(n, float)\n",
+    "\n",
+    "# Elimination\n",
+    "\n",
+    "# k --> Fixed Rows\n",
+    "\n",
+    "for k in range(n-1):\n",
+    "\n",
+    "    # To avoid nan (division by zero)\n",
+    "    if a[k,k] == 0:\n",
+    "        # Swapping rows so that multiplication of zero everywhere is avoided\n",
+    "        for j in range (n):\n",
+    "            a[k,j], a[k+1, j] = a[k+1, j], a[k,j]\n",
+    "        b[k], b[k+1] = b[k+1], b[k]\n",
+    "\n",
+    "    for i in range (k+1, n):\n",
+    "        # To avoid nan (division by zero)\n",
+    "        if a[i,k] == 0: \n",
+    "            continue\n",
+    "        factor = a[k,k] / a[i,k]\n",
+    "        b[i] = b[k] - (factor * b[i])\n",
+    "        for j in range (k, n):\n",
+    "            a[i,j] = a[k,j] - (factor * a[i,j])\n",
+    "\n",
+    "\n",
+    "# print(a)\n",
+    "# print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. The Back Substitution\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "\r\n",
-    "\r\n",
-    "\r\n"
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Solution of the system :\n",
+      "[nan nan nan nan nan]\n"
+     ]
+    }
    ],
-   "outputs": [],
-   "metadata": {}
+   "source": [
+    "x[n-1] = b[n-1] / a[n-1, n-1]\n",
+    "\n",
+    "for i in range(n-2, -1, -1):\n",
+    "    terms = 0\n",
+    "    for j in range (i+1, n):\n",
+    "        terms +=a[i,j]*x[j]\n",
+    "    x[i] = (b[i] - terms)/a[i,i]\n",
+    "\n",
+    "print('The Solution of the system :')\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
